<resources>
    <string name="app_name">About PornAOSP</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="menu1">Home Screen</string>
    <string name="menu2">Features</string>
    <string name="menu3">Downloads</string>
    <string name="menu4">Our team</string>
    <string name="menu5">FAQ</string>
    <string name="menu6">Media</string>
    <string name="title1">The definition of private... in some way.</string>
    <string name="title11">PornAOSP (or PAOSP) is an Android distribution focused around privacy when doing... ermmmm... certain activities.</string>
    <string name="title1111">PornAOSP is designed with simplicity and ease of use in mind. Based on LineageOS, it brings the finest stability and greatest features to the user.</string>
    <string name="title11111">Focused on improving what we see as the greatest features of Android and not sophisticating things, PornAOSP provides a smooth user experience with many intuitive customization options to satisfy your tinkering needs.</string>
    <string name="title2">Wait... what?</string>
    <string name="title22">What? Porn? An OS? How is it even possible?</string>
    <string name="title222">Looks fake, huh? Let me show you how wrong you are. It is actually being developed.</string>
    <string name="title2222">We created a Telegram group to share or project to the world, which grew to 250 members within a few hours. It also managed to run through a few of spam attacks, but that is a story for another day.</string>
    <string name="title22222">After some time we considered the issue of the PornHub trademark. We managed to release one build with PornHubOS name, but later ones will be branded PornAOSP. We strongly believe that name is much more neutral. We dont wish to risk a copyright abuse. However, the final name could change.</string>
    <string name="title3">Features</string>
    <string name="title33">Based on Android Nougat and Oreo</string>
    <string name="title333">Full Substratum support</string>
    <string name="title3333">Pornograph - an audio player based on Phonograph</string>
    <string name="title33333">Pre-rooted with Magisk</string>
    <string name="title333333">F-Droid and AdAway included</string>
    <string name="title3333333">Telegram Blu included</string>
    <string name="title33333333">Lawnchair as default launcher</string>
    <string name="title333333333">PornHub-style bootanimation</string>
    <string name="title3333333333">Custom wallpapers</string>
    <string name="title33333333333">PornHub app included!</string>
    <string name="title333333333333">Planned features</string>
    <string name="title3333333333333">LegitBrowser - a browser automatically cleaning sensitive history</string>
    <string name="title33333333333333">PORN - Probably Ordinary Recovery Project</string>
    <string name="title4">Downloads</string>
    <string name="title44">Have you ported our ROM to your device? Do you want it to appear on this site?</string>
    <string name="title444">Message @mattroot!</string>
    <string name="title4444">And yes, we know it is not the best release browser ever. We will fix it one day.</string>
    <string name="title44444">Nougat</string>
    <string name="title444444">Want to build it for your device? Here are the sources!</string>
    <string name="title4444444">Oreo</string>
    <string name="title44444444">Want to build it for your device? Here are the sources!</string>
    <string name="title5">Our Team</string>
    <string name="title55">Maintainer</string>
    <string name="title6">FAQ</string>
    <string name="title66">Is VoLTE working?</string>
    <string name="title666">-We dont know! Here, in Poland, there is no way to check it, because there is no carrier who would provide VoLTE in normal conditions. It mostly depends on if it is working in official Lineage builds.</string>
    <string name="title6666">When you will release a build for my phone?</string>
    <string name="title66666">-When someone from the devs manages to build and release it. If you are too excited to wait, build it yourself!</string>

</resources>
