<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="#2b2b2b"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scroll"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <TextView
                android:text="@string/title3"
                android:textColor="@color/porn"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_marginTop="5dp"
                android:text="@string/title33"
                android:textColor="@color/beyaz"
                android:textStyle="bold"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_marginTop="5dp"
                android:text="@string/title333"
                android:textColor="@color/beyaz"
                android:textStyle="bold"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_marginTop="5dp"
                android:text="@string/title3333"
                android:textColor="@color/beyaz"
                android:textStyle="bold"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_marginTop="5dp"
                android:text="@string/title33333"
                android:textColor="@color/beyaz"
                android:textStyle="bold"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_marginTop="5dp"
                android:text="@string/title333333"
                android:textColor="@color/beyaz"
                android:textStyle="bold"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_marginTop="5dp"
                android:text="@string/title3333333"
                android:textColor="@color/beyaz"
                android:textStyle="bold"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_marginTop="5dp"
                android:text="@string/title33333333"
                android:textColor="@color/beyaz"
                android:textStyle="bold"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_marginTop="5dp"
                android:text="@string/title333333333"
                android:textColor="@color/beyaz"
                android:textStyle="bold"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <TextView
                android:layout_marginTop="5dp"
                android:text="@string/title3333333333"
                android:textColor="@color/beyaz"
                android:textStyle="bold"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_marginTop="5dp"
                android:text="@string/title33333333333"
                android:textColor="@color/beyaz"
                android:textStyle="bold"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_marginTop="5dp"
                android:text="@string/title33333333333"
                android:textColor="@color/beyaz"
                android:textStyle="bold"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_marginTop="5dp"
                android:text="@string/title333333333333"
                android:textColor="@color/porn"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_marginTop="5dp"
                android:text="@string/title3333333333333"
                android:textColor="@color/beyaz"
                android:textStyle="bold"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_marginTop="5dp"
                android:text="@string/title33333333333333"
                android:textColor="@color/beyaz"
                android:textStyle="bold"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>