<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#2b2b2b"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scroll"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
    <TextView
        android:text="@string/title6"
        android:textColor="@color/porn"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginTop="5dp"
        android:text="@string/title66"
        android:textColor="@color/beyaz"
        android:textStyle="bold"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginTop="5dp"
        android:text="@string/title666"
        android:onClick="mattrott"
        android:textColor="@color/karisik"
        android:textStyle="bold"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginTop="5dp"
        android:text="@string/title6666"
        android:textColor="@color/beyaz"
        android:textStyle="bold"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginTop="5dp"
        android:text="@string/title66666"
        android:textColor="@color/karisik"
        android:textStyle="bold"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

        <ImageView
            android:baselineAlignBottom="true"
            android:id="@+id/paosp"
            android:src="@drawable/paosp"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="vertical"
            android:textAlignment="center"
            android:gravity="center"/>

    </LinearLayout>
    </ScrollView>
</RelativeLayout>