<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#2b2b2b"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.about.pornaosp.MainActivity"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/fragment"
        android:layout_width="0dp"
        android:layout_height="0dp"></FrameLayout>
    <ImageView
        android:id="@+id/paosp"
        android:src="@drawable/paosp"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="vertical"
        android:textAlignment="center"
        android:gravity="center"/>

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/title1"
                android:textAlignment="center"
                android:textColor="@color/porn"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/title11"
                android:textAlignment="center"
                android:textColor="@color/beyaz"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/title1111"
                android:textAlignment="center"
                android:textColor="@color/beyaz"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/title11111"
                android:textAlignment="center"
                android:textColor="@color/beyaz"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/title2"
                android:textAlignment="center"
                android:textColor="@color/porn"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/title22"
                android:textAlignment="center"
                android:textColor="@color/beyaz"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/title222"
                android:textAlignment="center"
                android:textColor="@color/beyaz"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/title2222"
                android:textAlignment="center"
                android:textColor="@color/beyaz"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/title22222"
                android:textAlignment="center"
                android:textColor="@color/beyaz"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@+id/mail"
                android:layout_margin="10dp"
                android:background="@color/beyaz" />
            <LinearLayout
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:onClick="telegramg"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/telegram"
                    android:layout_width="48dp"
                    android:layout_height="48dp" />

                <Button
                    android:onClick="github"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/github"
                    android:layout_width="48dp"
                    android:layout_height="48dp" />

                <Button
                    android:onClick="telegramc"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/telegram"
                    android:layout_width="48dp"
                    android:layout_height="48dp" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
