<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="#2b2b2b"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scroll"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <TextView
                android:text="@string/title4"
                android:textColor="@color/porn"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_marginTop="5dp"
                android:text="@string/title44"
                android:textColor="@color/beyaz"
                android:textStyle="bold"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_marginTop="5dp"
                android:text="@string/title444"
                android:onClick="mattrott"
                android:textColor="@color/beyaz"
                android:textStyle="bold"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_marginTop="5dp"
                android:text="@string/title4444"
                android:textColor="@color/beyaz"
                android:textStyle="bold"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_marginTop="5dp"
                android:text="@string/title44444"
                android:textColor="@color/porn"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <HorizontalScrollView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fillViewport="true">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:onClick="mido"
                        android:backgroundTint="@color/porn"
                        android:textColor="@color/beyaz"
                        android:textStyle="bold"
                        android:text="mido offıcıal"
                        android:textAlignment="center"
                        android:textSize="11sp" />

                    <Button
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:onClick="cancro"
                        android:backgroundTint="@color/porn"
                        android:textColor="@color/beyaz"
                        android:textStyle="bold"
                        android:text="cancro offıcıal"
                        android:textAlignment="center"
                        android:textSize="11sp" />

                    <Button
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:onClick="harpia"
                        android:backgroundTint="@color/porn"
                        android:textColor="@color/beyaz"
                        android:textStyle="bold"
                        android:text="harpia offıcıal"
                        android:textAlignment="center"
                        android:textSize="11sp" />

                    <Button
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:onClick="surnia"
                        android:backgroundTint="@color/porn"
                        android:textColor="@color/beyaz"
                        android:textStyle="bold"
                        android:text="surnia unoffıcıal"
                        android:textAlignment="center"
                        android:textSize="11sp" />

                    <Button
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:onClick="potter"
                        android:backgroundTint="@color/porn"
                        android:textColor="@color/beyaz"
                        android:textStyle="bold"
                        android:text="potter unoffıcıal"
                        android:textAlignment="center"
                        android:textSize="11sp" />

                    <Button
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:onClick="hydrogen"
                        android:backgroundTint="@color/porn"
                        android:textColor="@color/beyaz"
                        android:textStyle="bold"
                        android:text="hydrogen unoffıcıal"
                        android:textAlignment="center"
                        android:textSize="11sp" />

                    <Button
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:onClick="helium"
                        android:backgroundTint="@color/porn"
                        android:textColor="@color/beyaz"
                        android:textStyle="bold"
                        android:text="helium unoffıcıal"
                        android:textAlignment="center"
                        android:textSize="11sp" />

                    <Button
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:onClick="kenzo"
                        android:backgroundTint="@color/porn"
                        android:textColor="@color/beyaz"
                        android:textStyle="bold"
                        android:text="kenzo unoffıcıal"
                        android:textAlignment="center"
                        android:textSize="11sp" />

                    <Button
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:onClick="land"
                        android:backgroundTint="@color/porn"
                        android:textColor="@color/beyaz"
                        android:textStyle="bold"
                        android:text="land unoffıcıal"
                        android:textAlignment="center"
                        android:textSize="11sp" />

                    <Button
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:onClick="p2a42"
                        android:backgroundTint="@color/porn"
                        android:textColor="@color/beyaz"
                        android:textStyle="bold"
                        android:text="p2a42 unoffıcıal"
                        android:textAlignment="center"
                        android:textSize="11sp" />
                </LinearLayout>
            </HorizontalScrollView>

            <TextView
                android:layout_marginTop="5dp"
                android:text="@string/title444444"
                android:textColor="@color/beyaz"
                android:textStyle="bold"
                android:onClick="nougattree"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_marginTop="5dp"
                android:text="@string/title4444444"
                android:textColor="@color/porn"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fillViewport="true">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:onClick="midoo"
                        android:backgroundTint="@color/porn"
                        android:textColor="@color/beyaz"
                        android:textStyle="bold"
                        android:text="mido offıcıal"
                        android:textAlignment="center"
                        android:textSize="11sp" />

                </LinearLayout>
            </HorizontalScrollView>

            <TextView
                android:onClick="oreotree"
                android:layout_marginTop="5dp"
                android:text="@string/title44444444"
                android:textColor="@color/beyaz"
                android:textStyle="bold"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>